<resources>
    <string name="app_name">Intents</string>
    <string name="login">Login</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="botonMensaje">Mensaje</string>
    <string name="telefono">Telefono</string>
    <string name="url">url</string>
    <string name="dia">Dia</string>
    <string name="noche">Noche</string>
    <string name="nombre">Nombre</string>
    <string name="escribe_un_mensaje">Escribe un mensaje</string>
    <string name="enviarMensaje">Enviar</string>
    <string name="verMensaje">Ver</string>
</resources>