<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_marginTop="20dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        android:src="@drawable/img_login"
        android:contentDescription="@string/login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
       android:gravity="center"
        android:layout_marginTop="30dp"
>
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:textSize="20sp"
        android:textStyle="bold"
          android:layout_marginEnd="50dp"
        />

        <EditText
            android:id="@+id/editTextUsuario"
            android:layout_width="200dp"
            android:layout_height="50dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="30dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contrasena"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginEnd="25dp"
            />

        <EditText
            android:id="@+id/editTextPass"
            android:inputType="textPassword"
            android:layout_width="200dp"
            android:layout_height="50dp"/>


    </LinearLayout>
    <Button
        android:id="@+id/botonLogin"
        android:layout_width="200dp"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesion"
        android:layout_gravity="center"
        android:background="@color/logi_boton"
        />

</LinearLayout>